# shock

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: coverage.yaml  release-plz.yml  test.yml  update-flake.yml
nix/: checks.nix
nix/modules/: shock.nix
nix/pkgs/: default.nix  shock.nix
src/: cli.rs  config.rs  main.rs  snapshot.rs
