[package]
name = "shock"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = """
Regularly `shock` your ZFS pools to maintain good hygiene and prune stale snapshots
"""
documentation = "https://docs.rs/shock/"
homepage = "https://github.com/ipetkov/shock"
keywords = ["zfs"]
readme = "README.md"
repository = "https://github.com/ipetkov/shock"

[dependencies]
anyhow = { version = "1.0.81", default-features = false, features = ["std"] }
bstr = { version = "1.9.1", default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
